Fixed upload area overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -152,7 +152,7 @@
 
 .tab-area .upload-area{
   width: 100%;
-  margin-top: 30vh;
+  height: auto;
   display: flex;
   flex-direction: column;
 }
